--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>git</title>
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 </head>
 <body>
 	<div>hello git!!!</div>
